# flowcyto

./: .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  example_gates.json
.github/workflows/: linux-installer.yml  macos-installer.yml  windows-installer.yml
assets/fonts/: strip-pua.py
packaging/: make-appimage.sh  make-icon.py  make-macos-app.sh
packaging/linux/: flowcyto.desktop
packaging/windows/: flowcyto.iss
src/: autogate.rs  compensation.rs  fcs.rs  fcs_write.rs  gating.rs  gatingml.rs  gui.rs  logicle.rs  main.rs  popstats.rs  qc.rs  r_bridge.rs  report.rs  selftest.rs  stats.rs  test_util.rs  titration.rs  transform.rs  update.rs  xlsx.rs
tests/: cli.rs
tests/fixtures/: tiny.fcs
validation/: cytoflow-requirements.txt  cytoflow_crosscheck.txt  gen_golden.R  gen_golden_cytoflow.py  gen_reference.py  golden.csv  reference.fcs
