[package]
name = "flowcyto"
version = "0.1.17"
edition = "2021"
description = "Flow cytometry FCS file analyzer — compensation, asinh transform, gating, stats"
license = "MIT"

[[bin]]
name = "flowcyto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
byteorder = "1"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
csv = "1"
thiserror = "1"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_plot = "0.29"
egui_extras = "0.29"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = "3.3.0"
open = "5.3.5"
egui-phosphor = "0.7.3"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
# Set the Dock/application icon at runtime so the bare binary (dev `cargo run`)
# shows the app icon, not a generic one. winit can't set the macOS dock icon, and
# the bundle's .icns only applies to the installed .app. Versions match winit's
# (objc2 0.5.x / *-0.2.x) so no extra dependency copies are pulled in.
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.2.2", features = ["NSData"] }

[target.'cfg(windows)'.dependencies]
# Reattach to the parent console for CLI use (the GUI build is windows-subsystem).
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
